--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.1
+  cloud_firestore: ^4.9.1
   country_picker: ^2.0.20
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,11 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.7.1
   firebase_core: ^2.15.0
+  firebase_storage: ^11.2.6
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.2
+  image_picker: ^1.0.4
+  motion_toast: ^2.7.8
   page_transition: ^2.0.9
+  persistent_bottom_nav_bar_v2: ^4.2.8
   provider: ^6.0.5
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -59,6 +66,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/carousel_slideshow/
+    - assets/images/categories/
+    - assets/images/menu_pics/
+    - assets/images/offersNsponcered/
+    - assets/images/todays_deals/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
