--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,14 @@ dependencies:
   firebase_storage: ^11.2.6
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.2.2
   image_picker: ^1.0.4
-  motion_toast: ^2.7.8
+  motion_toast: ^2.7.9
   page_transition: ^2.0.9
   persistent_bottom_nav_bar_v2: ^4.2.8
   provider: ^6.0.5
+  razorpay_flutter: ^1.3.5
   uuid: ^4.0.0
 
 dev_dependencies:
